fix z-index bug for header

--- a/app/scss/layouts/_navigation.scss
+++ b/app/scss/layouts/_navigation.scss
@@ -157,7 +157,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: $gray-main;
-                z-index: 1;
+                z-index: 2;
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
